src/components/Pages/Maps/MapCard/MapCard.module.scss
@use "@/styles/mixins" as m;

.mapCard {
  background-color: #101828;
  border-radius: 12px;
  border: 1px solid #2D3748;
  box-shadow: 0 4px 12px rgba(0, 0, 0, .2);
  position: relative;
  transition: box-shadow .3s ease, border-color .3s ease;

  &:hover {
    box-shadow: 0 10px 25px rgba(255, 193, 7, 0.1);
    border-color: #FFC107;
  }
}

.mapCard .imgHolder {
  aspect-ratio: 19.58 / 11;
  position: relative;
}

.mapCard .imgHolder [data-type=img-holder] {
  border-radius: 11px 11px 0 0;
  width: 100%;
  max-width: 100%;
}

.mapCard .imgHolder img {
  width: 100%;
  height: 100%;
  transition: transform .7s ease;
}

.mapCard:hover .imgHolder img {
  filter: brightness(1.2);
  -webkit-filter: brightness(1.2);
}

.mapCard .imgHolder .layer {
  position: absolute;
  inset: 0;
  background: linear-gradient(to top,
      rgba(0, 0, 0, .3),
      rgba(0, 0, 0, .1) 60%,
      transparent);
  display: flex;
  align-items: center;
  justify-content: center;
  pointer-events: none;
  transition: opacity .3s ease;
}

.mapCard .imgHolder .layer .classifications {
  position: absolute;
  bottom: 1rem;
  left: 1rem;
  display: flex;
  gap: 0.5rem;
}

.mapCard .imgHolder .layer .classifications .classification {
  display: block;
  color: white;
  padding: 0.25rem 0.75rem;
  border-radius: 9999px;
  font-size: 0.75rem;
  font-weight: 500;
  text-transform: uppercase;

  &.jump,
  &.new,
  &.speedrun {
    background-color: #3a86ff;
  }

  &.defrag {
    background-color: #994ee0;
  }

  &.surf {
    background-color: #13a797;
  }

  &.expert {
    background-color: #d93e3e;
  }

  &.hard {
    background-color: #ef4444;
  }

  &.medium {
    background-color: #e7af07;
  }

  &.easy {
    background-color: #20b356;
  }
}

.mapCard .content {
  padding: 24px;
}

@media (max-width: 1280px) {
  .mapCard .content {
    padding: 24px 14px;
  }
}

@include m.small {
  .mapCard .content {
    padding: 18px;
  }
}

@include m.very-small {
  .mapCard .content {
    padding: 16px 10px;
  }
}

.mapCard .content .nameAndRating {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 24px;
  gap: 30px;
}

.mapCard .content .nameAndRating a {
  display: flex;
  gap: 7px;
  font-size: 1.2rem;
  font-weight: 700;
  color: #fff;
  margin: 0;
  letter-spacing: -.3px;
  position: relative;
  word-break: break-all;
  transition: color .2s;

  &:hover {
    color: #ffc107;
  }
}

@include m.small {
  .mapCard .content .nameAndRating a {
    font-size: 1rem;
    font-weight: 600;
  }
}

@include m.very-small {
  .mapCard .content .nameAndRating a {
    font-size: 1rem;
  }
}

.mapCard .content .nameAndRating a .name {
  display: flex;
  align-items: center;
}

.mapCard .content .nameAndRating a .ender {
  color: #facc15;
  font-size: .85rem;
  font-weight: 500;
  margin-left: 5px;
}

.videoIcon {
  display: block;
  width: 24px;
  height: 24px;
  position: relative;
  z-index: 1;
  margin-top: 2px;
}

.videoIcon::before {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  translate: -50% -50%;
  background-color: #fff;
  width: calc(100% - 6px);
  height: calc(100% - 16px);
  z-index: -1;
}

.videoIcon svg {
  width: 100%;
  height: 100%;
  fill: #FF0000;
}

